# ritofiles

./: .gitmodules  CMakeLists.txt  main.cpp
assimp/: CMakeLists.txt
assimp/include/: revision.h
assimp/include/assimp/: config.h
rito/: animation.cpp  animation.hpp  bin.cpp  bin.hpp  blend.cpp  blend.hpp  file.hpp  mapgeo.cpp  mapgeo.hpp  math.hpp  memory.hpp  simpleskin.cpp  simpleskin.hpp  skeleton.cpp  skeleton.hpp  types.hpp
src/: main.cpp  rito2assimp.cpp  rito2assimp.hpp
src/rito/: animation.cpp  animation.hpp  bin.cpp  bin.hpp  blend.cpp  blend.hpp  file.cpp  file.hpp  mapgeo.cpp  mapgeo.hpp  memory.hpp  simpleskin.cpp  simpleskin.hpp  skeleton.cpp  skeleton.hpp  types.cpp  types.hpp
